--- a/.github/workflows/cache.yml
+++ b/.github/workflows/cache.yml
@@ -1,5 +1,5 @@
 cache
-            - name: Cache
+- name:github/workflows/cache.yml
   uses: actions/cache@v3.3.2
   with:
     # A list of files, directories, and wildcard patterns to cache and restore
